进行了分文件编写, 完成了截止到电磁场二次量子化的内容

--- a/reference.bib
+++ b/reference.bib
@@ -50,3 +50,11 @@
   pages={153--155},
   chapter={6}
 }
+@book{griffthsPPSRTrick,
+  title={{粒子物理导论}},
+  author={David J. Griffths(王青译)},
+  year={2021},
+  publisher={机械工业出版社},
+  pages={74--81},
+  chapter={3}
+}
