--- a/gaugetheory.tex
+++ b/gaugetheory.tex
@@ -306,6 +306,12 @@ $A'^\mu$的EoM就变成:
     J^\nu=ie(\psi\partial^\nu\psi^*-\psi^*\partial^\nu\psi-2e\psi\psi^*A^\nu)
 \end{equation}
 
+并且, 如果我们再次做全局$U(1)$变换, 我们可以再次得到这一守恒流:
+\begin{align}
+    J^\nu&=\pa{\mathcal L}{\partial_\mu\psi}\frac{\delta\psi}{\delta\alpha}+\pa{\mathcal L}{\partial_\mu\psi^*}\frac{\delta\psi^*}{\delta\alpha}\\
+    &=i(\psi\partial^\nu\psi^*-\psi^*\partial^\nu\psi-2e\psi\psi^*A^\nu)
+\end{align}
+
 于是, 就从对规范不变性的追求中, 我们得到了标量QED.
 
 \subsection{标量QED的Feynman规则}
