--- a/preparation.tex
+++ b/preparation.tex
@@ -17,7 +17,7 @@ unitarity, and causality. And it is the language of the laws of nature.\cite{qft
     \item 在不影响歧义的情况下, 对于标量场$\phi$, 其偏导$\mu$分量记为$\phi_\mu=\partial_\mu\phi$
     \item 在不影响歧义的情况下, $p_\mu x^\mu$类的缩并可简记为$px$
     \item $\phi_\mathbf x\equiv\phi(\mathbf x)$
-    \item $\phi_i\equiv\phi(x_1)$
+    \item $\phi_i\equiv\phi(x_i)$
     \item $\delta_{xy}\equiv\delta^4(x-y)$
     \item $\delta_{ij}\equiv\delta^4(x_i-x_j)$
     \item $D_{xy}\equiv D_F(x-y)$
@@ -195,7 +195,7 @@ $\mathrm d$为外微分算符，$A_\mu$为电磁四势.\\
 于是我们可以有如下推论:
 \begin{theorem}[Lorentz变换的逆矩阵]\label{theorem:Lorentz_inverse}
     \begin{equation}
-        (\Lambda^{-1})^{\mu}_{~~\nu}=\Lambda_\alpha^{~~\mu}
+        (\Lambda^{-1})^{\mu}_{~~\nu}=\Lambda_\nu^{~~\mu}
     \end{equation}
 \end{theorem}
 \begin{proof}
@@ -318,7 +318,7 @@ $\mathrm d$为外微分算符，$A_\mu$为电磁四势.\\
         [J_i, K_j]=i\epsilon_{ijk}K^k
     \end{equation}
     \begin{equation}
-        [k_i, K_j]=-i\epsilon_{ijk}J^k
+        [K_i, K_j]=-i\epsilon_{ijk}J^k
     \end{equation}
 \end{theorem}
 \begin{proof}
