完成了spinor的大体内容

--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,22 @@
 \input{gaugetheory.tex}
 
 \newpage
+\appendix
+\section{Clebsch-Gordan系数表}
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[page=1,width=1.0\textwidth]{clebsch-gordan.pdf}
+  \caption{Clebsch-Gordan系数表}\label{cgcoeff}
+\end{figure}
+
+\newpage
 \nocite{*}
 \printbibliography[heading=bibintoc, title=\ebibname]
+
+% 致谢
+\newpage
+\section*{致谢}
+\addcontentsline{toc}{section}{致谢}
+感谢黄海洋学长的指导以及纠错、谭骐忠同学的纠错.
 
 \end{document}
