--- a/gaugetheory.tex
+++ b/gaugetheory.tex
@@ -25,9 +25,9 @@
 \begin{equation}
     \Pi^{\mu\nu}=\pa{\mathcal L}{(\partial_\mu A_\nu)}=-F^{\mu\nu}=\begin{bmatrix}
         0 & E^1 & E^2 & E^3\\
-        -E^1 & 0 & -B^3 & B^2\\
-        -E^2 & B^3 & 0 & -B^1\\
-        -E^3 & -B^2 & B^1 & 0
+        -E^1 & 0 & B^3 & -B^2\\
+        -E^2 & -B^3 & 0 & B^1\\
+        -E^3 & B^2 & -B^1 & 0
     \end{bmatrix}
 \end{equation}
 
@@ -41,7 +41,7 @@
 做Legendre变换, 得到哈密顿密度
 \begin{align}
     \mathcal H&=\Pi^0_{~~i}\dot A^i-\mathcal L=-\Pi^{0i}\partial_t A^i-\mathcal L\\
-    &=\vec E\cdot\partial_t\vec A+\frac12 \vec  B^2-\frac12 \vec  E^2-\frac12m^2A_{\mu}A^{\mu}\\
+    &=-\vec E\cdot\partial_t\vec A+\frac12 \vec  B^2-\frac12 \vec  E^2-\frac12m^2A_{\mu}A^{\mu}\\
     &=-\vec E\cdot\partial_t\vec A+\frac12 \vec B^2-\frac12 \vec  E^2-\frac12m^2\phi^2+\frac12m^2\vec A^2
 \end{align}
 
@@ -65,7 +65,7 @@
 
 我们做Fourier变换, 得到
 \begin{align}
-    &A^\mu=\int\ldsq{p}\sum_{\lambda=1}^3\left(\epsilon_\lambda^\nu a_{\lambda\vec p}\exp{-ipx}+\epsilon_\lambda^{\mu*}a^\dagger_{\lambda\vec p}\exp{ipx}\right)\\
+    &A^\mu=\int\ldsq{p}\sum_{\lambda=1}^3\left(\epsilon_\lambda^\mu a_{\lambda\vec p}\exp{-ipx}+\epsilon_\lambda^{\mu*}a^\dagger_{\lambda\vec p}\exp{ipx}\right)\\
     &E^\mu=\int\ldsq{p}\sum_{\lambda=1}^3\left((p^\mu\epsilon_\lambda^{0*}-p^0\epsilon_\lambda^{\mu*})a^\dagger_{\lambda\vec p}\exp{ipx}-(p^\mu\epsilon^0_\lambda-p^0\epsilon_\lambda^\mu)a_{\lambda\vec p}\exp{-ipx}\right)
 \end{align}
 
@@ -297,13 +297,13 @@ $A'^\mu$的EoM就变成:
 \begin{align}
     \begin{cases}
         &(\partial^2+m^2)\psi=-2ieA_\mu\partial^\mu\psi+e^2\psi A_\mu A^\mu\\
-        &\partial_\mu F^{\mu\nu}=ie(\psi\partial^\nu\psi^*-\psi^*\partial^\nu\psi-2e\psi\psi^*A^\nu)
+        &\partial_\mu F^{\mu\nu}=ie(\psi\partial^\nu\psi^*-\psi^*\partial^\nu\psi-2ie\psi\psi^*A^\nu)
     \end{cases}
 \end{align}
 
 于是我们可以得到电流:
 \begin{equation}
-    J^\nu=ie(\psi\partial^\nu\psi^*-\psi^*\partial^\nu\psi-2e\psi\psi^*A^\nu)
+    J^\nu=ie(\psi\partial^\nu\psi^*-\psi^*\partial^\nu\psi-2ie\psi\psi^*A^\nu)
 \end{equation}
 
 并且, 如果我们再次做全局$U(1)$变换, 我们可以再次得到这一守恒流:
@@ -315,3 +315,1047 @@ $A'^\mu$的EoM就变成:
 于是, 就从对规范不变性的追求中, 我们得到了标量QED.
 
 \subsection{标量QED的Feynman规则}
+
+\newpage
+
+\section{旋量}
+\subsection{Lorentz群\label{Lorentz}}
+我们首先考虑对矢量的Lorentz变换.
+\begin{definition}[Lorentz变换]
+    Lorentz变换为一种保内积的变换:
+    \begin{equation}
+        \bar x^\mu=\Lambda^\mu_{~~\nu}x^\nu
+    \end{equation}
+    使得
+    \begin{equation}
+        \bar x^\mu\bar x_\mu=x^\mu x_\mu
+    \end{equation}
+\end{definition}
+\begin{theorem}[Lorentz变换的性质]\label{theorem:lorentz_property}
+    \begin{equation}
+        \Lambda^\mu_{~~\sigma}g_{\mu\nu}\Lambda^\nu_{~~\rho}=g_{\sigma\rho}
+    \end{equation}
+\end{theorem}
+\begin{proof}
+    \begin{equation}
+        \bar{x}^2=g_{\mu\nu}\bar{x}^\mu\bar x^\nu=x^\sigma(\Lambda^\mu_{~~\sigma}g_{\mu\nu}\Lambda^\nu_{~~\rho})x^\rho=x^\sigma g_{\sigma\rho} x^\rho
+    \end{equation}
+\end{proof}
+于是我们可以有如下推论:
+\begin{theorem}[Lorentz变换的逆矩阵]\label{theorem:Lorentz_inverse}
+    \begin{equation}
+        (\Lambda^{-1})^{\mu}_{~~\nu}=\Lambda_\nu^{~~\mu}
+    \end{equation}
+\end{theorem}
+\begin{proof}
+    由\ref{theorem:lorentz_property}可得
+    \begin{equation}
+        g^{\rho\beta}\Lambda^\mu_{~~\rho}\Lambda^\nu_{~~\sigma}g_{\mu\nu}=g_{\rho\sigma}g^{\rho\beta}=\delta^\beta_{~~\sigma}
+    \end{equation}
+    即:
+    \begin{equation}
+        \Lambda_\nu^{~~\beta}\Lambda^\nu_{~~\sigma}=\delta^\beta_{~~\sigma}
+    \end{equation}
+    于是可以得证.
+\end{proof}
+\begin{definition}[$\delta\omega^\mu_{~~\nu}$]\label{def:deltaomega}
+    对于无穷小Lorentz变换$\Lambda^\mu_{~~\nu}$, 定义
+    \begin{equation}
+        \Lambda^\mu_{~~\nu}=\delta^\mu_{~~\nu}+\delta\omega^\mu_{~~\nu}
+    \end{equation}
+\end{definition}
+通过\eqref{theorem:lorentz_property}可以发现$\delta\omega_{\mu\nu}$是反称的. 并且我们还可以进一步写成矩阵形式\:
+\begin{equation}
+    \delta\omega^\mu_{~~\nu}=\begin{bmatrix}
+        0 & v^1 & v^2 & v^3 \\
+        v^1 & 0 & \theta^3 & -\theta^2 \\
+        v^2 & -\theta^3 & 0 & \theta^1 \\
+        v^3 & \theta^2 & -\theta^1 & 0
+    \end{bmatrix}
+\end{equation}
+其中, $v^i$为参考系间的相对速度, $\theta^i$为沿着$i$轴旋转的角度. 或者写为降指标后的结果
+\begin{equation}
+    \delta\omega_{\mu\nu}=\begin{bmatrix}
+        0 & v^1 & v^2 & v^3 \\
+        -v^1 & 0 & -\theta^3 & \theta^2 \\
+        -v^2 & \theta^3 & 0 & -\theta^1\\
+        -v^3 & -\theta^2 & \theta^1 & 0
+    \end{bmatrix}
+\end{equation}
+
+于是我们还可以进一步写出Lorentz变换的显式形式
+\begin{align}\label{lorentz-for-vector}
+    \begin{cases}
+        \delta x^0=\beta^i x^i\\
+        \delta x^i=\beta^i x^0-\epsilon_{ijk}\theta^j x^k
+    \end{cases}
+\end{align}
+\begin{theorem}[$\delta\omega_{\mu\nu}$的性质]
+    \begin{equation}
+        \delta\omega_{\mu\nu}=\delta\omega_{[\mu\nu]}
+    \end{equation}
+\end{theorem}
+
+然后我们想要把Lorentz变换的操作抽象化, 一般化, 将其提升到群表示论的高度, 于是我们有一个用抽象的Lorentz变换参数$\omega_{\mu\nu}$表示的对某一个对象进行的Lorentz变换, 这成为Lorentz群的一个表示.
+\begin{definition}[无穷小Lorentz群变换的表示$U(\Lambda)$]
+    \begin{equation}
+        U(\mathbf 1+\delta\omega)=1-\frac i2\delta\omega_{\mu\nu}M^{\mu\nu}
+    \end{equation}
+    其中，$M^{\mu\nu}=M^{[\mu\nu]}$, 是某一个算符
+\end{definition}
+以此我们有有限Lorentz群变换的表示
+\begin{equation}
+    U(\omega)=\exp{-\frac i2\omega_{\mu\nu}M^{\mu\nu}}
+\end{equation}
+
+\begin{theorem}[结合律]\label{theorem:U_combine}
+    作为群表示, 我们要求$U$满足:
+    \begin{equation}
+        U(\Lambda\Lambda')=U(\Lambda)U(\Lambda')
+    \end{equation}
+\end{theorem}
+根据定理\ref{theorem:Lorentz_inverse}, 定理\ref{theorem:U_combine}, 定义\ref{def:deltaomega}, 我们要求$U(\Lambda^{-1}\Lambda'\Lambda)=U(\Lambda^{-1})U(\Lambda')U(\Lambda)$, 于是有\ref{theorem:UMU}:
+\begin{theorem}\label{theorem:UMU}
+    \begin{equation}
+        U^{-1}_\Lambda M^{\mu\nu}U_\Lambda=\Lambda^\mu_{~~\rho}\Lambda^\nu_{~~\sigma}M^{\rho\sigma}
+    \end{equation}
+\end{theorem}
+\begin{proof}
+    \begin{equation}\label{2eq1}
+        U_\Lambda^{-1}U_{\Lambda'}U_\Lambda=1-\frac i2\delta{\omega'}_{\mu\nu}U_\Lambda^{-1}M^{\mu\nu}U_\Lambda
+    \end{equation}
+    \begin{equation}
+        U(\Lambda^{-1}\Lambda'\Lambda)=U(1+\Lambda^{-1}\omega'\Lambda)=1-\frac i2(\Lambda^{-1}\delta\omega'\Lambda)_{\mu\nu}M^{\mu\nu}
+    \end{equation}
+    计算$(\Lambda^{-1}\delta\omega'\Lambda)^{\mu}_{~~\nu}$
+    \begin{equation}
+        (\Lambda^{-1}\delta\omega'\Lambda)^{\mu}_{~~\nu}=\Lambda_\sigma^{~~\mu}\delta{\omega'}^\sigma_{~~\rho}\Lambda^\rho_{~~\nu}
+    \end{equation}
+    于是
+    \begin{equation}
+        (\Lambda^{-1}\delta\omega'\Lambda)_{\mu\nu}=\Lambda^{\sigma}_{~~\mu}\delta{\omega'}_{\sigma\rho}\Lambda^\rho_{~~\nu}
+    \end{equation}
+    因此
+    \begin{equation}\label{2eq2}
+        U(\Lambda^{-1}\Lambda'\Lambda)=U(1+\Lambda^{-1}\omega'\Lambda)=1-\frac i2\Lambda^{\sigma}_{~~\mu}\delta{\omega'}_{\sigma\rho}\Lambda^\rho_{~~\nu}M^{\mu\nu}
+    \end{equation}
+    将\eqref{2eq1}与\eqref{2eq2}取等我们有
+    \begin{equation}
+        \delta{\omega'}_{\rho\sigma}U_\Lambda^{-1}M^{\rho\sigma}U_\Lambda=\Lambda^{\sigma}_{~~\mu}\delta{\omega'}_{\sigma\rho}\Lambda^\rho_{~~\nu}M^{\mu\nu}
+    \end{equation}
+    于是
+    \begin{equation}
+        U^{-1}_\Lambda M^{\mu\nu}U_\Lambda=\Lambda^\mu_{~~\rho}\Lambda^\nu_{~~\sigma}M^{\rho\sigma}
+    \end{equation}
+\end{proof}
+进一步展开我们可以得到
+\begin{theorem}[$M^{\mu\nu}$的对易子]\label{M-commutator}
+    \begin{equation}
+        [M^{\mu\nu}, M^{\rho\sigma}]=i(-g^{\mu\rho}M^{\nu\sigma}-g^{\sigma\nu}M^{\mu\rho}+g^{\mu\sigma}M^{\nu\rho}+g^{\rho\nu}M^{\mu\sigma})
+    \end{equation}
+\end{theorem}
+\begin{proof}
+    展开
+    \begin{equation}
+        (1+\frac i 2\delta \omega_{\alpha\beta}M^{\alpha\beta})M^{\mu\nu}(1-\frac i 2\delta \omega_{\rho\sigma}M^{\rho\sigma})=(\delta^\mu_{~~\rho}+\delta\omega^\mu_{~~\rho})(\delta^\nu_{~~\sigma}+\delta\omega^\nu_{~~\sigma})M^{\rho\sigma}
+    \end{equation}
+    化简整理得到
+    \begin{equation}
+        \frac i2\delta\omega_{\rho\sigma}[M^{\rho\sigma}, M^{\mu\nu}]=\delta\omega_{\rho\sigma}(M^{\mu\sigma}g^{\rho\nu}-M^{\rho\nu}g^{\mu\sigma})
+    \end{equation}
+    于是
+    \begin{equation}\label{eq3}
+        [M^{\mu\nu}, M^{\rho\sigma}]=2i(g^{\mu\sigma}M^{\nu\rho}+g^{\rho\nu}M^{\mu\sigma})+A^{\mu\nu\rho\sigma}
+    \end{equation}
+    其中$A^{\mu\nu\rho\sigma}=A^{\nu\mu\rho\sigma}$, $A^{\mu\nu\rho\sigma}=A^{\mu\nu\sigma\rho}$.\\
+    交换$\mu$, $\nu$:
+    \begin{equation}\label{eq4}
+        [M^{\nu\mu}, M^{\rho\sigma}]=2i(g^{\nu\sigma}M^{\mu\rho}+g^{\rho\mu}M^{\nu\sigma})+A^{\mu\nu\rho\sigma}
+    \end{equation}
+    注意到$M^{\mu\nu}$反称, \eqref{eq3}+\eqref{eq4}得到:
+    \begin{equation}
+        A^{\mu\nu\rho\sigma}=-i(g^{\mu\sigma}M^{\nu\rho}+g^{\nu\rho}M^{\mu\sigma}+g^{\mu\sigma}M^{\nu\sigma}+g^{\nu\sigma}M^{\mu\rho})
+    \end{equation}
+    于是可得
+    \begin{important}
+        \begin{equation}
+            [M^{\mu\nu}, M^{\rho\sigma}]=i(-g^{\mu\rho}M^{\nu\sigma}-g^{\sigma\nu}M^{\mu\rho}+g^{\mu\sigma}M^{\nu\rho}+g^{\rho\nu}M^{\mu\sigma})
+        \end{equation}
+    \end{important}
+\end{proof}
+\begin{definition}[Lorentz群生成元]\label{lorentz-generators}
+    \begin{equation}
+        J^i =\frac12\epsilon_{ijk}M^{jk}\Rightarrow M^{ij}=\epsilon_{ijk}J^k
+    \end{equation}
+    \begin{equation}
+        K^i=M^{i0}
+    \end{equation}
+\end{definition}
+写为矩阵形式就是
+\begin{equation}
+    M^{\mu\nu}=\begin{bmatrix}
+        0 & -K^1 & -K^2 & -K^3\\
+        K^1 & 0 & J^3 & -J^2\\
+        K^2 & -J^3 & 0 & J^1\\
+        K^3 & J^2 & -J^1 & 0
+    \end{bmatrix}
+\end{equation}
+
+然后我们可以将无穷小Lorentz群表示写为
+\begin{equation}
+    1+i\theta^iJ^i+i\beta^iK^i
+\end{equation}
+有限大的写为
+\begin{equation}
+    \exp{i\theta^iJ^i+i\beta^iK^i}
+\end{equation}
+
+然后我们有
+\begin{theorem}[Lorentz群生成元的对易关系]\label{lorentz-commutator}
+    \begin{equation}
+        [J^i, J^j]=i\epsilon_{ijk}J^k
+    \end{equation}
+    \begin{equation}
+        [J^i, K^j]=i\epsilon_{ijk}K^k
+    \end{equation}
+    \begin{equation}
+        [K^i, K^j]=-i\epsilon_{ijk}J^k
+    \end{equation}
+\end{theorem}
+注意, 在这里我们都认为是具体指标的计算, 因此不关心上下标的问题: 矢量就是上标, 体元就是下标, 从而避免(+---)度规三维部分升降指标会多出负号的恼人特性.
+
+\begin{proof}
+    \begin{align}
+        [J^i, J^j]&=\frac14\epsilon_{iml}\epsilon_{jnp}M^{ml}M^{np}\\
+        &=\frac14\epsilon_{iml}\epsilon_{jnp}\cdot 2i(g^{mp}M^{ln}+g^{lm}M^{mp})\\
+        &=-\frac i2\epsilon_{iml}\epsilon_{jnp}(\delta_{mp}M^{ln}+\delta_{ln}M^{mp})\\
+        &=-i\epsilon_{mli}\epsilon_{mjn}M^{ln}\\
+        &=-i(\delta_{lj}\delta_{in}-\delta_{ln}\delta_{ij})M^{ln}\\
+        &=iM^{ij}\\
+        &=i\epsilon_{ijk}J^k\\
+        [J^i, K^j]&=\frac12\epsilon_{imn}\cdot2i(g^{m0}M^{nj}+g^{nj}M^{m0})\\
+        &=i\epsilon_{imn}(-\delta_{nj})M^{m0}\\
+        &=i\epsilon_{ijk}M^{k0}\\
+        &=i\epsilon_{ijk}K^k
+    \end{align}
+    \begin{align}
+        [K^i, K^j]&=[M^{i0}, M^{j0}]\\
+        &=-i g^{00}M^{ij}\\
+        &=-iM^{ij}\\
+        &=-i\epsilon_{ijk}J^k
+    \end{align}
+\end{proof}
+\subsection{分解Lorentz群}
+正如我们在定义\ref{lorentz-generators}中看到的那样, 洛伦兹群有六个生成元, 从而将Lorentz变换表示为:
+\begin{equation}
+    \Lambda=\exp{i\theta_i J^i+i\beta_i K^i}
+\end{equation}
+
+并且定理\ref{lorentz-commutator}, 有对易关系
+\begin{equation}
+    [J_i, J_j]=i\epsilon_{ijk}J^k
+\end{equation}
+\begin{equation}
+    [J_i, K_j]=i\epsilon_{ijk}K^k
+\end{equation}
+\begin{equation}
+    [K_i, K_j]=-i\epsilon_{ijk}J^k
+\end{equation}
+
+或者写为一个张量形式
+\begin{equation}
+    M^{\mu\nu}=\begin{bmatrix}
+        0 & -K^1 & -K^2 & -K^3\\
+        K^1 & 0 & J^3 & -J^2\\
+        K^2 & -J^3 & 0 & J^1\\
+        K^3 & J^2 & -J^1 & 0
+    \end{bmatrix}
+\end{equation}
+
+并且根据定理\ref{M-commutator}我们有:
+\begin{equation}
+    [M^{\mu\nu}, M^{\rho\sigma}]=i(-g^{\mu\rho}M^{\nu\sigma}-g^{\sigma\nu}M^{\mu\rho}+g^{\mu\sigma}M^{\nu\rho}+g^{\rho\nu}M^{\mu\sigma})
+\end{equation}
+
+于是
+\begin{equation}
+    \Lambda=\exp{-\frac i2\omega_{\mu\nu}M^{\mu\nu}}
+\end{equation}
+
+我们设
+\begin{equation}
+    J_i^{\pm}=\frac12(J_i\pm iK_i)
+\end{equation}
+
+也就是:
+\begin{align}
+    \begin{cases}
+        & \vec J=\vec J^++\vec J^-\\
+        & \vec K=i(\vec J^--\vec J^+)
+    \end{cases}
+\end{align}
+
+于是有对易关系
+\begin{align}
+    \begin{cases}
+        & [J^+_i, J^+_j]=i\epsilon_{ijk}J^{+k} \\
+        & [J^-_i, J^-_j]=i\epsilon_{ijk}J^{-k} \\
+        & [J^+_i, J^-_j]=0
+    \end{cases}
+\end{align}
+我们发现，$\vec J^\pm$是解耦的, 而它们分别满足$\mathfrak{su}(2)$的Lie代数关系!
+
+于是我们得到结论
+\begin{important}
+    \begin{equation}
+        \mathfrak{so}(1, 3)=\mathfrak{su}(2)\otimes\mathfrak{su}(2)
+    \end{equation}
+\end{important}
+
+因此, 我们可以将Lorentz群的不可约表示用两个半整数$(m, n)$表示, 分别代表两个$\mathfrak{su}(2)$部分的角量子数. 
+
+于是我们发现不可约表示$(m, n)$的维度为$(2m+1)(2n+1)$.
+
+\subsection{不可约表示}
+\begin{example}[$(0, 0)$型]
+    其维度为1, 并且其是Lorentz不变的. 因此我们指出$(0, 0)$型就是标量.
+\end{example}
+\begin{example}[$(\frac12,\frac12)$型]
+    其维度为4, 并且我们有生成元
+    \begin{equation}
+        J^{+i}=J^{-i}=\frac{\sigma^i}2
+    \end{equation}
+
+    于是我们有
+    \begin{equation}
+        \vec J=\frac12\vec\sigma\otimes1+1\otimes\frac12\vec\sigma, \vec K=i\left(1\otimes\frac12\vec\sigma-\frac12\vec\sigma\otimes1\right)
+    \end{equation}
+    (千万不要直接将两个$\frac12\vec\sigma$相加, 因为它们是分别作用到不同的旋量部分的)
+
+    考虑两旋量$\xi, \eta$, 我们用矩阵$\xi\eta^T\sigma^2$表示这两旋量的张量积.(为什么这里这么奇怪地在最后插入一个$\sigma^2$? 原因在于只有$\sigma^{T2}=-\sigma^2\neq\sigma^2$, 如果没有这个$\sigma^2$就会使得接下来的变换规则非常奇怪)
+
+    而$\vec J, \vec K$对其的作用为
+    \begin{align}
+        & \vec J(\xi\eta^T)=\frac12(\sigma\xi\eta^T\sigma^2+\xi\eta^T\sigma^T\sigma^2)\\
+        & \vec K(\xi\eta^T)=\frac i2(-\sigma\xi\eta^T\sigma^2+\xi\eta^T\sigma^T\sigma^2)
+    \end{align}
+
+    需要注意到, 这里出现了$\vec\sigma^T$, 而
+    \begin{align}
+       &\sigma^{iT}=\sigma^i, i=0,1,3\\
+       &\sigma^{2T}=-\sigma^2
+    \end{align}
+
+    我们设
+    \begin{equation}
+        \xi\eta^T\sigma^2=V^\mu\bar\sigma_\mu
+    \end{equation}
+    (注意这里, 因为单纯$\xi\eta^T\sigma^2$的秩为$1$, 我们要表示任意的旋量其实需要多个$\xi\eta^T\sigma^2$做线性组合. 但是因为线性性使得对于单个$\xi\eta^T\sigma^2$成立的对于它们的线性组合式子也仍然成立, 所以这里出于书写简便性的考虑我们就不妨写一个$\xi\eta^T\sigma^2$来表示$V^\mu\bar\sigma_\mu$)
+
+    计算可以发现
+    \begin{align}
+        J^2(V^\mu\bar\sigma_\mu)&=\frac12(\sigma^2V^\mu\bar\sigma_\mu+V^\mu\bar\sigma_\mu\sigma^2\sigma^{2T}\sigma^2)\\
+        &=\frac12V^\mu(\sigma^2\bar\sigma_\mu-\bar\sigma_\mu\sigma^2)\\
+        &=i\bar\sigma_j\epsilon_{j2i}V^i
+    \end{align}
+    并且对于$k\neq2$, 我们不难计算得到
+    \begin{align}
+        J^k(V^\mu\bar\sigma_\mu)=i\bar\sigma_j\epsilon_{jki}V^i
+    \end{align}
+    整理结果有, 对于$k=1,2,3$
+    \begin{align}
+        J^k(V^\mu\bar\sigma_\mu)=i\bar\sigma_j\epsilon_{jki}V^i
+    \end{align}
+
+    同理我们有
+    \begin{equation}
+        K^i(V^\mu\bar\sigma_\mu)=\frac i2(-\sigma^kV^\mu\bar\sigma_\mu+V^\mu\bar\sigma_\mu\sigma^2\sigma^{kT}\sigma^2)
+    \end{equation}
+    于是我们可以计算得到
+    \begin{equation}
+        K^k(V^\mu\bar\sigma_\mu)=-i(V^k\bar\sigma_0+V^0\bar\sigma_k)
+    \end{equation}
+
+    所以我们发现, 对于$V^\mu\bar\sigma_\mu$做无穷小Lorentz变换有
+    \begin{align}
+        \delta(V^\mu\bar\sigma_\mu)&=\Lambda_{\theta^i, \beta^i}(V^\mu\bar\sigma_\mu)-V^\mu\bar\sigma_\mu\\
+        &=i\theta^kJ^k(V^\mu\bar\sigma_\mu)+i\beta^kK^k(V^\mu\bar\sigma_mu)\\
+        &=-\bar\sigma_j\epsilon_{jki}\theta^kV^i+\beta^k(V^k\bar\sigma_0+V^0\bar\sigma_k)
+    \end{align}
+
+    对照\eqref{lorentz-for-vector}这符合Lorentz群作用下矢量的变换, 因此我们指出, $(\frac12, \frac12)$其实代表的就是4矢量.
+\end{example}
+\begin{example}[$(0,\frac12)$型-右手Weyl旋量]
+    其维度为2. 于是我们可以将其记为$\psi_R$, 是一个二维列向量. 根据生成元
+    \begin{align}
+        \begin{cases}
+            &\vec J^-=0\\
+            &\vec J^+=\frac{\sigma}2
+        \end{cases}
+    \end{align}
+    我们有得到Lorentz变换的群作用
+    \begin{equation}
+        \psi_R=\exp{\frac12(i\theta^i\sigma^i+\beta^i\sigma^i)}\psi_R        
+    \end{equation}
+    对无穷小Lorentz变换有
+    \begin{equation}
+        \delta\psi_R=\frac12(i\theta^j+\beta^j)\sigma^j\psi_R
+    \end{equation}
+
+    我们计算发现
+    \begin{equation}
+        \delta(\psi_R^\dagger\psi_R)=\beta^i\psi_R^\dagger\sigma^i\psi_R
+    \end{equation}
+    \begin{equation}
+        \delta(\psi_R^\dagger\sigma^i\psi_R)=-\epsilon_{ijk}\theta^j\psi_R^\dagger\sigma^k\psi_R+\beta^i\psi_R^\dagger\psi_R
+    \end{equation}
+    如果我们将它们组合为$(\psi_R^\dagger\psi_R, \psi_R^\dagger\sigma^i\psi_R)^T$, 可以发现这正是矢量的Lorentz变换形式. 因此我们发现了一个4矢量
+    \begin{equation}
+        \psi_R^\dagger\sigma^\mu\psi_R
+    \end{equation}, 其中
+    \begin{equation}
+        \sigma^0=\begin{pmatrix}
+            1 & 0 \\
+            0 & 1
+        \end{pmatrix}
+    \end{equation}
+
+    从这里我们也可以体会到所谓"旋量是矢量开平方根"的说法的道理: 我们将两个旋量组合在一起, 就能乘出一个矢量.
+\end{example}
+\begin{example}[$(\frac12,0)$型-左手Weyl旋量]
+    其维度为2. 于是我们可以将其记为$\psi_L$, 是一个二维列向量. 生成元为
+    \begin{align}
+        \begin{cases}
+            &\vec J^-=\frac{\sigma}2\\
+            &\vec J^+=0\
+        \end{cases}
+    \end{align}
+    我们有得到Lorentz变换的群作用
+    \begin{equation}
+        \psi_L=\exp{\frac12(i\theta^i\sigma^i-\beta^i\sigma^i)}\psi_R        
+    \end{equation}
+    对无穷小Lorentz变换有
+    \begin{equation}
+        \delta\psi_L\frac12(i\theta^j-\beta^j)\sigma^j\psi_R
+    \end{equation}
+
+    我们定义$\bar\sigma^\mu=(1, -\sigma^i)^T$, 并计算发现
+    \begin{equation}
+        \delta(\psi_L^\dagger\psi_L)=-\beta^i\psi_L^\dagger\sigma^i\psi_L=\beta^i\psi_L^\dagger\bar\sigma^i\psi_L
+    \end{equation}
+    \begin{equation}
+        \delta(\psi_L^\dagger\bar\sigma^i\psi_L)=-\sigma_{ijk}\theta^j\psi_L^\dagger\sigma^k\psi_L+\beta^i\psi_L^\dagger\psi_L
+    \end{equation}
+
+    于是我们发现
+    \begin{equation}
+        \psi_L^\dagger\bar\sigma^\mu\psi_L
+    \end{equation}
+    是一个4矢量
+\end{example}
+
+进一步地, 我们还可以发现
+\begin{equation}
+    \delta(\psi_L^\dagger\psi_R)=\delta(\psi_R^\dagger\psi_L)=0
+\end{equation}
+于是$\psi_L^\dagger\psi_R, \psi_R^\dagger\psi_L$是Lorentz标量.
+
+再计算
+\begin{equation}
+    \delta(\psi^\dagger_R\sigma^\mu\partial_\mu\psi_R)
+\end{equation}
+根据
+\begin{equation}
+    \delta(\partial_\mu)=\partial_\mu'-\partial_\mu
+\end{equation}
+即
+\begin{align}
+    &\delta(\partial_0)=-\beta^i\partial_i\\
+    &\delta(\partial_i)=-\beta^i\partial_0+\epsilon_{kji}\theta^j\partial_k
+\end{align}
+我们有
+\begin{equation}
+    \delta(\psi^\dagger_R\sigma^\mu\partial_\mu\psi_R)=0
+\end{equation}
+这个结论对于$\psi^\dagger_L\bar\sigma^\mu\partial_\mu\psi_L$同样成立.
+
+所以我们发现
+\begin{equation}
+    \psi^\dagger_R\sigma^\mu\partial_\mu\psi_R, \psi^\dagger_L\bar\sigma^\mu\partial_\mu\psi_L
+\end{equation}
+是Lorentz标量.
+
+\subsection{Dirac旋量}
+利用上一节中我们组合出来的标量, 我们可以构造一个Lagrangian
+\begin{equation}
+    \mathcal L=i\psi^\dagger_R\sigma^\mu\partial_\mu\psi_R+i\psi^\dagger_R\sigma^\mu\partial_\mu\psi_R-m(\psi_R^\dagger\psi_L+\psi_L^\dagger\psi_R)
+\end{equation}
+
+我们将$\psi_L, \psi_R$拼到一起
+\begin{equation}
+    \psi=\begin{pmatrix}
+        \psi_L\\
+        \psi_R
+    \end{pmatrix}
+\end{equation}
+然后构造
+\begin{equation}
+    \gamma^\mu=\begin{pmatrix}
+        0 & \sigma^\mu\\
+        \bar\sigma^\mu & 0
+    \end{pmatrix}
+\end{equation}
+定义
+\begin{equation}
+    \bar\psi=\psi^\dagger\gamma^0=(\psi_R^\dagger,\psi_L^\dagger)
+\end{equation}
+
+就有
+\begin{equation}
+    \mathcal L=\bar\psi(i\slashed\partial-m)\psi
+\end{equation}
+其中
+\begin{equation}
+    \slashed\partial=\gamma^\mu\partial^\mu
+\end{equation}
+
+并且从矩阵形式我们注意到
+\begin{equation}
+    \{\gamma^\mu, \gamma^\nu\}=2g^{\mu\nu}
+\end{equation}
+以及
+\begin{equation}\label{gamma-conj-idx}
+    \gamma^{0\dagger}=\gamma^0, \gamma^{i\dagger}=-\gamma^i
+\end{equation}
+利用
+\begin{equation}
+    \gamma^0\gamma^0=g^{00}=1, \gamma^i\gamma0=-\gamma^0\gamma^i
+\end{equation}
+我们可以将式\eqref{gamma-conj-idx}写为更紧凑的形式
+\begin{equation}
+    \gamma^{\mu\dagger}=\gamma^0\gamma^\mu\gamma^0
+\end{equation}
+
+在下一节\ref{clifford}中我们将会看到一般化的对于$\gamma^\mu$性质的讨论.
+
+接着我们继续考虑Dirac旋量, 我们可以从Lagrangian中得到EoM:
+\begin{equation}
+    (i\slashed\partial-m)\psi=0
+\end{equation}
+
+这是一个一阶的PDE, 似乎与预期中的Klein-Gordan方程不符? 我们可以将其左乘$(i\slashed\partial+m)$, 得到
+\begin{equation}
+    (i\slashed\partial+m)(i\slashed\partial-m)\psi=(-\partial^2-m^2)\psi=0
+\end{equation}
+于是我们发现, 将其解耦为二阶PDE后, 它仍然是满足Klein-Gordan方程的, 从而具有我们所预期的色散关系
+\begin{equation}
+    \omega^2=\vec p^2+m^2
+\end{equation}
+
+关于EoM的讨论我们见\ref{2ndq-dirac}节, 在那我们将会详细地讨论Dirac方程的解, 并将其二次量子化.
+
+然后我们尝试获得Dirac旋量的Lorentz变换及其生成元. 我们首先直接考虑$\psi$的变换:
+\begin{align}
+    \delta\psi&=\begin{pmatrix}
+        \delta\psi_L\\
+        \delta\psi_R
+    \end{pmatrix}=\frac i2\theta^i\begin{pmatrix}
+        \sigma^i & 0\\
+        0 & \sigma^i
+    \end{pmatrix}\psi+\frac12v^i\begin{pmatrix}
+        \bar\sigma^i & 0\\
+        0 & \sigma^i
+    \end{pmatrix}\psi
+\end{align}
+考虑到
+\begin{equation}
+    [\gamma^j, \gamma^k]=-[\sigma^j, \sigma^k]\begin{pmatrix}
+        1 & 0\\
+        0 & 1
+    \end{pmatrix}=-i\epsilon_{jkl}\sigma^l\begin{pmatrix}
+        1 & 0\\
+        0 & 1
+    \end{pmatrix}
+\end{equation}
+即
+\begin{equation}
+    \epsilon_{ijk}[\gamma^j, \gamma^k]=-2i\sigma^i\begin{pmatrix}
+        1 & 0\\
+        0 & 1
+    \end{pmatrix}
+\end{equation}
+还有
+\begin{align}
+    \gamma^0\gamma^i=\begin{pmatrix}
+        \bar\sigma^i & 0\\
+        0 & \sigma^i
+    \end{pmatrix}, \gamma^i\gamma^0=\begin{pmatrix}
+        -\bar\sigma^i & 0\\
+        0 & -\sigma^i
+    \end{pmatrix}
+\end{align}
+即
+\begin{equation}
+    [\gamma^i, \gamma^0]=-2\begin{pmatrix}
+        \bar\sigma^i & 0\\
+        0 & \sigma^i
+    \end{pmatrix}
+\end{equation}
+于是
+\begin{align}
+    \delta\psi&=i\epsilon_{ijk}\theta^i(\frac i4[\gamma^j, \gamma^k])\psi+iv^i(\frac i4[\gamma^i, \gamma^0])\\
+    &=-\frac i2\omega_{\mu\nu}(\frac i4[\gamma^\mu, \gamma^\nu])
+\end{align}
+
+所以我们发现, 
+\begin{definition}[Dirac旋量生成元]
+    \begin{equation}
+        S^{\mu\nu}=\frac i4[\gamma^\mu, \gamma^\nu]
+    \end{equation}
+\end{definition}
+对Dirac旋量, Lorentz变换为
+\begin{equation}
+    \psi\to\Lambda_s\psi, \Lambda_s=\exp{-\frac i2\omega_{\mu\nu}S^{\mu\nu}}
+\end{equation}
+并且有旋转与Boost生成元
+\begin{align}
+    & J^{i}=\frac12\epsilon_{ijk}S^{jk}=\frac i8\epsilon_{ijk}[\gamma^j, \gamma^k]\\
+    & K^i=S^{i0}=\frac i4[\gamma^i, \gamma^0]
+\end{align}
+\begin{equation}
+    \psi\to\Lambda_s\psi, \Lambda_s=\exp{i\vec\theta\cdot\vec J+i\vec v\cdot\vec K}
+\end{equation}
+
+并且我们可以验证$S^{\mu\nu}$满足定理\ref{M-commutator}: 首先计算对易子
+\begin{equation}\label{S-gamma-commutator}
+    [S^{\mu\nu}, \gamma^\rho]=i(\gamma^\mu g^{\nu\rho}-\gamma^\nu g^{\mu\rho})
+\end{equation}
+所以
+\begin{align}
+    [S^{\mu\nu}, S_{\rho\sigma}]&=\frac i4\left([S^{\mu\nu}, \gamma^\rho\gamma^\sigma]-[S^{\mu\nu}, \gamma^\sigma\gamma^\rho]\right)\\
+    &=\frac i4\left(\gamma^\rho[S^{\mu\nu}, \gamma^\sigma][S^{\mu\nu}, \gamma^\rho]\gamma^\sigma-\gamma^\sigma[S^{\mu\nu}, \gamma^\rho]-[S^{\mu\nu}, \gamma^\sigma]\gamma^\rho\right)
+\end{align}
+于是可得
+\begin{equation}
+    [S^{\mu\nu}, S^{\rho\sigma}]=i(-g^{\mu\rho}S^{\nu\sigma}-g^{\sigma\nu}S^{\mu\rho}+g^{\mu\sigma}S^{\nu\rho}+g^{\rho\nu}S^{\mu\sigma})
+\end{equation}
+
+\subsection{Clifford代数\label{clifford}}
+上一节中, 我们定义出来的$\gamma^\mu$有其独特的代数结构, 本节我们将它抽象出来, 提升到代数的角度研究$\gamma^\mu$.
+\begin{definition}[Clifford代数]
+    Clifford代数即满足
+    \begin{equation}
+        \{\gamma^\mu, \gamma^\nu\}=2g^{\mu\nu}
+    \end{equation}
+    \begin{equation}
+        \gamma^{\mu\dagger}=\gamma^0\gamma^\mu\gamma^0
+    \end{equation}
+    的代数.
+\end{definition}
+\begin{definition}[Slash]
+    对于矢量$A^\mu$, 其slash
+    \begin{equation}
+        \slashed A\equiv \gamma^\mu A_\mu
+    \end{equation}
+\end{definition}
+\begin{theorem}
+    我们有如下常见Clifford代数结论
+    \begin{align}
+        &\slashed p\slashed p=p^2\\
+        &\gamma^\mu\gamma_\mu=4\\
+        &\gamma^\mu\slashed p\gamma_\mu=-2\slashed p\\
+        &\gamma^\mu\slashed p\slashed q\gamma_\mu=4pq
+    \end{align}
+\end{theorem}
+\begin{proof}
+    \begin{align}
+        \slashed p\slashed p&=\gamma^\mu\gamma^\nu p_{\mu}p_\nu=\frac12(\gamma^\mu\gamma^\nu+\gamma^\nu\gamma^\mu)p_\mu p_\nu=g^{\mu\nu}p_{\mu}p_{\nu}=p^2\\
+        \gamma_\mu\gamma^\mu&=\gamma_\mu\gamma_\nu g^{\mu\nu}=\frac12(\gamma_\mu\gamma_\nu+\gamma_\nu\gamma_\mu)g^{\mu\nu}=g_{\mu\nu}g^{\mu\nu}=4\\
+        \gamma_\mu\slashed p\gamma^\mu&=\gamma^\mu\gamma^\alpha p_\alpha\gamma_\mu=(2g^{\mu\alpha}-\gamma^\alpha\gamma^\mu)p_\alpha\gamma_\mu=2\slashed p-4\slashed p=-2\slashed p\\
+        \gamma_\mu\slashed p\slashed q\gamma^\mu&=\gamma^\mu\gamma^\alpha p_\alpha q^\beta\gamma_\beta\gamma_\mu=(2g^{\mu\alpha}-\gamma^\alpha\gamma^\mu)(2g_{\beta\mu}-\gamma_\mu\gamma_\beta)p_\alpha p^\beta\notag\\
+        &=4pq-2\slashed p\slashed q-2\slashed q\slashed p+4\slashed p\slashed q=4pq
+    \end{align}
+\end{proof}
+
+\begin{theorem}
+    \begin{equation}
+        \Lambda_s^{-1}\gamma^\mu\Lambda_s={\Lambda_v}^\mu_{~~\nu}\gamma^\nu
+    \end{equation}
+    其中$\Lambda_v$即$\omega$对应的对矢量的Lorentz变换矩阵.
+\end{theorem}
+\begin{proof}
+    考虑无穷小Lorentz变换.
+    \begin{equation}
+        \Lambda_s=(1-\frac12i\omega_{\alpha\beta}S^{\alpha\beta}), \Lambda_s^{-1}=(1+\frac12i\omega_{\alpha\beta}S^{\alpha\beta})
+    \end{equation}
+    于是
+    \begin{align}
+        \Lambda_s^{-1}\gamma^\mu\Lambda_s&=(1+\frac i2\omega_{\alpha\beta}S^{\alpha\beta})\gamma^\mu(1-\frac i2\omega_{\alpha\beta}S^{\alpha\beta})\\
+        &=\gamma^\mu+\frac i2\omega_{\alpha\beta}[S^{\alpha\beta}, \gamma^\mu]
+    \end{align}
+
+    利用式\eqref{S-gamma-commutator}我们有
+    \begin{align}
+        \Lambda_s^{-1}\gamma^\mu\Lambda_s&=\gamma^\mu-\frac 12\omega_{\alpha\beta}(\gamma^\alpha g^{\beta\mu}-\gamma^\beta g^{\alpha\mu})\\
+        &=\gamma^\mu+\frac12\omega_{\beta\alpha}g^{\beta\mu}\gamma^\alpha+\frac12\theta_{\alpha\beta}g^{\alpha\mu}\gamma^\beta\\
+        &=\gamma^\mu+\omega^\mu_{~~\nu}\gamma^\nu\\
+        &=(\delta^\mu_{~~\nu}+\omega^\mu_{~~\nu})\gamma^\nu\\
+        &=(\Lambda_v)^\mu_{~~\nu}\gamma^\nu
+    \end{align}
+    其中
+    \begin{equation}
+        (\Lambda_v)^\mu_{~~\nu}=\delta^\mu_{~~\nu}+\omega^\mu_{~~\nu}
+    \end{equation}
+    即矢量的Lorentz变换.\\
+\end{proof}
+\begin{theorem}
+    \begin{equation}
+        \gamma^0\Lambda_s^\dagger\gamma^0=\Lambda_s^{-1}
+    \end{equation}
+\end{theorem}
+\begin{proof}
+    我们求生成元的共轭
+    \begin{align}
+        S^{\mu\nu\dagger}&=-\frac i4(\gamma^\mu\gamma^\nu-\gamma^\nu\gamma^\mu)^\dagger\\
+        &=-\frac i4(\gamma^{\nu\dagger}\gamma^{\mu\dagger}-\gamma^{\mu\dagger}\gamma^{\nu\dagger})\\
+        &=\frac i4(\gamma^0\gamma^\mu\gamma^0\gamma^0\gamma^\nu\gamma^0-\gamma^0\gamma^\nu\gamma^0\gamma^0\gamma^\mu\gamma^0)\\
+        &=\gamma^0S^{\mu\nu}\gamma^0
+    \end{align}
+
+    然后由于$\gamma^0\gamma^0=1$, 所以$\gamma^0$可以从$\Lambda_s^\dagger$的两边拎入指数中:
+    \begin{equation}
+        \gamma^0\Lambda_s^\dagger\gamma^0=\gamma^0\exp{\frac i2\omega_{\mu\nu}S^{\mu\nu\dagger}}\gamma^0=\exp{\frac i2\omega_{\mu\nu}\gamma^0S^{\mu\nu\dagger}\gamma^0}=\exp{\frac i2\omega_{\mu\nu}S^{\mu\nu}}=\Lambda_s^{-1}
+    \end{equation}
+\end{proof}
+
+\begin{theorem}
+    $\bar\psi\psi$是Lorentz标量, $\bar\psi\gamma^\mu\psi$是Loretnz矢量, $\bar\psi\gamma^\mu\gamma^\nu\psi$是Lorentz张量.
+\end{theorem}
+\begin{proof}
+    \begin{align}
+        \bar\psi\psi=\psi^\dagger\gamma^0\psi\to \psi^\dagger\Lambda_s^\dagger\gamma^0\Lambda_s\psi=\psi^\dagger\gamma^0\Lambda_s^{-1}\Lambda_s\psi=\psi^\dagger\gamma^0\psi=\bar\psi\psi
+    \end{align}
+    \begin{align}
+        \bar\psi\gamma^\mu\psi=\psi^\dagger\gamma^0\gamma^\mu\psi&\to\psi^\dagger\Lambda_s^\dagger\gamma^0\gamma^\mu\Lambda_s\psi=\psi^\dagger\Lambda_s^{-1}\gamma^\mu\Lambda_s\psi\notag\\
+        &=\psi^\dagger\gamma^0(\Lambda_v)^\mu_{~~\nu}\psi=(\Lambda_v)^\mu_{~~\nu}\gamma^\nu\bar\psi\gamma^\mu\psi
+    \end{align}
+    \begin{align}
+        \bar\psi\gamma^\mu\gamma^\nu\psi=\psi^\dagger\gamma^0\gamma^\mu\gamma^\nu\psi&\to\psi^\dagger\Lambda_s^\dagger\gamma^0\gamma^\mu\gamma^\nu\Lambda_s\psi=\psi^\dagger\Lambda_s^{-1}\gamma^\mu\Lambda_s\Lambda_s^{-1}\gamma^\nu\Lambda_s\psi\notag\\
+        &=\psi^\dagger\gamma^0(\Lambda_v)^\mu_{~~\alpha}\gamma^\alpha(\Lambda_v)^\nu_{~~\beta}\gamma^\beta\psi=(\Lambda_v)^\mu_{~~\alpha}(\Lambda_v)^\nu_{~~\beta}\bar\psi\gamma^\alpha\gamma^\beta\psi
+    \end{align}
+\end{proof}
+
+\subsection{Dirac旋量的二次量子化\label{2ndq-dirac}}
+首先是第一步, 解EoM. 设在Weyl基底下一个一般的解为$(\psi_L \psi_R)^T$, 于是EoM可以写为
+\begin{equation}
+    \begin{pmatrix}
+        -m & i\sigma^\mu\partial_\mu\\
+        i\bar\sigma^\mu\partial_\mu & -m
+    \end{pmatrix}\begin{pmatrix}
+        \psi_L\\
+        \psi_R
+    \end{pmatrix}=0
+\end{equation}
+
+在动量空间中有
+\begin{align}
+    &\sigma^\mu p_\mu\psi_R=(E-\sigma\cdot\vec p)\psi_R=m\psi_L\\
+    &\bar\sigma^\mu p_\mu\psi_L=(E+\sigma\cdot\vec p)\psi_L=m\psi_R
+\end{align}
+
+对于零质量Fermion, 这个方程是解耦的:
+\begin{align}
+    &\sigma^\mu p_\mu\psi_R=(E-\vec\sigma\cdot\vec p)\psi_R=0\\
+    &\bar\sigma^\mu p_\mu\psi_L=(E+\vec\sigma\cdot\vec p)\psi_L=0
+\end{align}
+
+\begin{definition}[螺旋度]
+    \begin{equation}
+        H=\frac{\vec\sigma\cdot\vec p}{|p|}
+    \end{equation}
+\end{definition}
+
+可以发现
+\begin{align}
+    & H\psi_R=\psi_R\\
+    & H\psi_L=-\psi_L\\
+\end{align}
+
+可见, $\psi_R, \psi_L$分别是螺旋度的本征矢. 这里螺旋度的物理意义就是, 自旋指向和运动方向的夹角. 在这里我们发现, Weyl旋量的左右手其实分别就是自旋方向和运动方向分别是左手螺旋和右手螺旋的关系.
+
+我们一般认为中微子的$m\approx0$, 所以中微子是具有固定的手型. 由于我们世界Parity的破缺, 导致自然界中其实基本上只存在左手中微子.
+
+一般性的讨论结束, 我们开始从EoM中寻求可以拿来正则量子化的解. 设正能解$\psi=u^s\exp{-ipx}$, 负能解$\psi=v^s\exp{ipx}$
+
+对于$u^s$
+\begin{equation}
+    (\slashed p-m)u^s=0
+\end{equation}
+在Weyl基底中即
+\begin{equation}
+    \begin{pmatrix}
+        -m & p^\mu\sigma_\mu\\
+        p^\mu\bar\sigma_\mu & -m
+    \end{pmatrix}u^s=0
+\end{equation}
+
+根据
+\begin{align}
+    (\vec p\cdot\vec\sigma)^2&=p^ip^j\sigma^i\sigma^j=p^ip^j(\delta_{ij}+i\epsilon_{ijk}\sigma^k)=p^ip^i=\vec p^2
+\end{align}
+然后
+\begin{align}
+    (p\cdot\sigma)(p\cdot\bar\sigma)&=(p^0\sigma^0-\vec p\cdot\vec\sigma)(p^0\sigma^0+\vec p\cdot\vec\sigma)\\
+    &=(p^0)^2-(\vec p\cdot\sigma)^2=(p^0)^2-(\vec p)^2=p^2=m^2
+\end{align}
+即(都是算数平方根, 取正根, 这里没有负根的情况)
+\begin{equation}
+    \sqrt{(p\cdot\sigma)(p\cdot\bar\sigma)}=\sqrt{m^2}=m
+\end{equation}
+我们可以计算验证
+\begin{align}
+    \begin{pmatrix}
+        -m & p^\mu\sigma_\mu\\
+        p^\mu\bar\sigma_\mu & -m
+    \end{pmatrix}\begin{pmatrix}
+        \sqrt{p\sigma}\zeta_s\\
+        \sqrt{p\bar\sigma}\zeta_s
+    \end{pmatrix}&=\begin{pmatrix}
+        -m\sqrt{p\sigma}\zeta_s+p\sigma\sqrt{p\bar\sigma}\zeta_s\\
+        p\bar\sigma\sqrt{p\sigma}\zeta_s-m\sqrt{p\bar\sigma}\zeta_s
+    \end{pmatrix}\\
+    &=\begin{pmatrix}
+        \sqrt{p\sigma}\left(-m+\sqrt{(p\bar\sigma)(p\sigma)}\right)\zeta_s\\
+        \sqrt{p\bar\sigma}\left(\sqrt{(p\sigma)(p\bar\sigma)}-m\right)\zeta_s
+    \end{pmatrix}=0
+\end{align}
+
+所以
+\begin{equation}
+    u^s=\begin{pmatrix}
+        \sqrt{p\sigma}\zeta_s\\
+        \sqrt{p\bar\sigma}\zeta_s
+    \end{pmatrix}
+\end{equation}
+是EoM的解.
+
+对于$v^s$同理, 它满足
+\begin{equation}
+    (\slashed p+m)v^s=0
+\end{equation}
+
+可以验证
+\begin{equation}
+    v^s=\begin{pmatrix}
+        \sqrt{p\sigma}\eta_s\\
+        -\sqrt{p\bar\sigma}\eta_s
+    \end{pmatrix}
+\end{equation}
+是满足EoM的解.
+
+然后我们取正交基底张成$u^s, v^s$的解空间, 即我们取$\zeta_1, \zeta_2$以及$\eta_1, \eta_2$满足
+\begin{equation}
+    \zeta_r^\dagger\zeta_s=\delta_{rs}, \eta_r^\dagger\eta_s=\delta_{rs}
+\end{equation}
+然后取$\zeta_s, \eta_s$分别代入$u^s, v^s$得到$u^s, v^s$的解空间的基底.
+
+我们可以验证正交性
+\begin{equation}
+    \bar u^ru^s=\begin{pmatrix}
+        \sqrt{p\bar\sigma}\zeta_r^\dagger & \sqrt{p\sigma}\zeta_r^\dagger
+    \end{pmatrix}\begin{pmatrix}
+        \sqrt{p\sigma}\zeta_s\\
+        \sqrt{p\bar\sigma}\zeta_s
+    \end{pmatrix}=m\delta^{rs}+m\delta^{rs}=2m\delta^{rs}
+\end{equation}
+\begin{equation}
+    \bar v^rv^s=\begin{pmatrix}
+        -\sqrt{p\bar\sigma}\eta_r^\dagger & \sqrt{p\sigma}\eta_r^\dagger
+    \end{pmatrix}\begin{pmatrix}
+        \sqrt{p\sigma}\eta_s\\
+        -\sqrt{p\bar\sigma}\eta_s
+    \end{pmatrix}=-m\delta^{rs}-m\delta^{rs}=-2m\delta^{rs}
+\end{equation}
+\begin{equation}
+    \bar u^rv^s=\begin{pmatrix}
+        \sqrt{p\bar\sigma}\zeta_r^\dagger & \sqrt{p\sigma}\zeta_r^\dagger
+    \end{pmatrix}\begin{pmatrix}
+        \sqrt{p\sigma}\eta_s\\
+        -\sqrt{p\bar\sigma}\eta_s
+    \end{pmatrix}=0
+\end{equation}
+
+于是
+\begin{theorem}
+    \begin{equation}
+        \bar u^ru^s=-\bar v^rv^s=2m\delta_{rs}, \bar u^rv^s=\bar v^ru^s=0
+    \end{equation}
+\end{theorem}
+
+\begin{theorem}
+    \begin{equation}
+        \sum_s u^s\bar u^s=\slashed p+m
+    \end{equation}
+    \begin{equation}
+        \sum_s v^s\bar v^s=\slashed p-m
+    \end{equation}
+\end{theorem}
+\begin{proof}
+    根据$\zeta_1, \zeta_2$是$\mathbb{C}^2$上的完备正交基底, 所以
+    \begin{equation}
+        \sum_s \zeta_s\zeta_s^\dagger=1
+    \end{equation}
+
+    于是
+    \begin{align}
+        \sum_s u^s\bar u^s&=\sum_s\begin{pmatrix}
+            \sqrt{p\sigma}\zeta_s\\
+            \sqrt{p\bar\sigma}\zeta_s
+        \end{pmatrix}\begin{pmatrix}
+            \sqrt{p\bar\sigma}\zeta_s^\dagger & \sqrt{p\sigma}\zeta_s^\dagger
+        \end{pmatrix}\notag\\
+        &=\sum_s\begin{pmatrix}
+            \sqrt{(p\sigma)(p\bar\sigma)}\zeta_s\zeta_s^\dagger & p\sigma\zeta_s\zeta_s^\dagger\\
+            p\bar\sigma\zeta_s\zeta_s^\dagger & \sqrt{(p\sigma)(p\bar\sigma)}\zeta_s\zeta_s^\dagger
+        \end{pmatrix}\notag\\
+        &=\begin{pmatrix}
+            m & p\sigma\\
+            p\bar\sigma & m
+        \end{pmatrix}=p\gamma+m=\slashed p+m
+    \end{align}
+    \begin{align}
+        \sum_s v^s\bar v^s&=\sum_s\begin{pmatrix}
+            \sqrt{p\sigma}\eta_s\\
+            -\sqrt{p\bar\sigma}\eta_s
+        \end{pmatrix}\begin{pmatrix}
+            -\sqrt{p\bar\sigma}\eta_s^\dagger & \sqrt{p\sigma}\eta_s^\dagger
+        \end{pmatrix}\notag\\
+        &=\sum_s\begin{pmatrix}
+            -\sqrt{(p\sigma)(p\bar\sigma)}\eta_s\eta_s^\dagger & p\sigma\eta_s\eta_s^\dagger\\
+            p\bar\sigma\eta_s\eta_s^\dagger & -\sqrt{(p\sigma)(p\bar\sigma)}\eta_s\eta_s^\dagger
+        \end{pmatrix}\notag\\
+        &=\begin{pmatrix}
+            -m & p\sigma\\
+            p\bar\sigma & -m
+        \end{pmatrix}=p\gamma-m=\slashed p-m
+    \end{align}
+\end{proof}
+
+\begin{theorem}
+    \begin{equation}
+        \bar u^s\gamma^\mu u_{s'}=2p^\mu\delta_{ss'}
+    \end{equation}
+    \begin{equation}
+        \bar v^s\gamma^\mu v_{s'}=2p^\mu\delta_{ss'}
+    \end{equation}
+\end{theorem}
+\begin{proof}
+    根据Dirac方程
+    \begin{equation}
+        \slashed pu^s=mu^s
+    \end{equation}
+    \begin{equation}
+        \bar u^s\slashed p=m\bar u^s
+    \end{equation}
+
+    于是
+    \begin{align}
+        2m\bar u^s\gamma^\mu u_{s'}=\bar u^s\slashed p\gamma^\mu u_{s'}+\bar u^s\gamma^\mu\slashed pu_{s'}=p_\nu\bar u^s\{\gamma^\mu, \gamma^\nu\}u_{s'}=2p^\mu\cdot 2m\delta_{ss'}=4mp^\mu\delta_{ss'}
+    \end{align}
+
+    所以
+    \begin{equation}
+        \bar u^s\gamma^\mu u_{s'}=2p^\mu\delta_{ss'}
+    \end{equation}
+    同理
+    \begin{equation}
+        \bar v^s\gamma^\mu v_{s'}=2p^\mu\delta_{ss'}
+    \end{equation}
+\end{proof}
+\kaishu 注: 但需要注意$\bar u^s\gamma^\mu v_{s'}\neq0$
+
+因为考虑
+\begin{equation}
+    2m\bar u^s\gamma^\mu v_{s'}=\bar u^s\slashed p\gamma^\mu v_{s'}-\bar u^s\gamma^\mu\slashed pv_{s'}=\bar u^sp_\nu[\gamma^\nu, \gamma^\mu]v_{s'}\neq0
+\end{equation}
+\songti
+
+接下来由于涉及到对易子的问题, 为了能够区分对易子的乘法顺序以及做乘法的方式(内积还是外积), 我们对$\gamma, \psi$引入指标:
+\begin{align}
+    &\psi\to\psi_A\\
+    &\bar\psi\to\bar\psi^A\\
+    &\gamma^\mu\to\gamma^{\mu~~B}_{~~A}\\
+    &\slashed p\to\slashed p_A^{~~B}
+\end{align}
+
+那么
+\begin{align}
+    &\bar\psi\psi\to\bar\psi^A\psi_A=\psi_A\bar\psi^A\\
+    &\psi\bar\psi\to\psi_A\bar\psi^B=\bar\psi^B\psi_A
+\end{align}
+
+于是我们开始将Dirac场量子化
+\begin{align}
+    &\psi_A=\int\ldsq{p}\sum_s(u^s_A\a{p}^s\exp{-ipx}+v^{s}_A\b{p}^{s\dagger}\exp{ipx})\\
+    &\bar\psi^A=\int\ldsq{p}\sum_s(\bar u^{sA}\a{p}^{s\dagger}\exp{ipx}+\bar v^{sA}\b{p}^{s}\exp{-ipx})
+\end{align}
+
+然后我们尝试计算两点关联函数
+\begin{align}
+    \braket{0|\psi_A(y)\bar\psi^B(x)|0}&=\int\ld{p}\frac{\slashed p_A^{~~B}+m}{2\om p}\exp{ip(x-y)}\\
+    &=(-i\slashed\partial_A^{~~B}+m)\int\ld p\exp{ip(x-y)}
+\end{align}
+\begin{align}
+    \braket{0|\bar\psi^B(x)\psi_A(y)|0}&=\int\ld{p}\frac{\slashed p_A^{~~B}-m}{2\om p}\exp{ip(x-y)}\\
+    &=(i\slashed\partial_A^{~~B}-m)\int\ld p\exp{-ip(x-y)}
+\end{align}
+
+考虑Fermion的反交换性, 我们定义
+\begin{equation}
+    \mathcal T\left\{\psi_A(y)\bar\psi^B(x)\right\}\equiv\psi_A(y)\bar\psi^B(x)\Theta(y^0-x^0)-\bar\psi^B(x)\psi_A(y)\Theta(x^0-y^0)
+\end{equation}
+
+于是可得Feynman传播子
+\begin{equation}
+    \braket{\psi_A(y)\bar\psi^B(x)}=\int\dddd p\frac{i(\slashed p_A^{~~B}+m)}{p^2-m^2+i\epsilon}\exp{ip(x-y)}
+\end{equation}
+
+\subsection{C,P,T变换}
+在本节我们尝试讨论对场的$C,P,T$变换.
+
+首先是$P$变换:
+我们定义$P$变换为
+
+\subsection{旋量QED}
+然后我们尝试和电磁场耦合. 同样考虑局部$U(1)$规范变换, 即
+\begin{equation}
+    \psi\to\exp{-i\alpha}\psi
+\end{equation}
+设
+\begin{equation}
+    \partial_\mu\to D_\mu=\partial_\mu+ieA_\mu
+\end{equation}
+让局域$U(1)$规范变换对$A_\mu$满足
+\begin{equation}
+    A_\mu\to A_\mu+\frac1e\partial_\mu\alpha
+\end{equation}
+则
+\begin{equation}
+    D_\mu(\exp{-i\alpha}\psi)=\exp{-i\alpha}D_\mu\psi
+\end{equation}
+
+于是根据最小耦合原理我们可以得到Lagrangian
+\begin{equation}
+    \mathcal L=\bar\psi(i\slashed D-m)\psi-\frac14F^2
+\end{equation}
+即
+\begin{equation}
+    \mathcal L=\bar\psi(i\partial_\mu-m)\psi-eA_\mu\bar\psi\gamma^\mu\psi
+\end{equation}
+
+于是我们发现电流项
+\begin{equation}
+    J^\mu=e\bar\psi\gamma^\mu\psi
+\end{equation}
+
+\subsection{Majorana旋量}
