--- a/reference.bib
+++ b/reference.bib
@@ -58,3 +58,11 @@
   pages={74--81},
   chapter={3}
 }
+@book{LiangQMMath,
+  title={{微分几何入门与广义相对论(中册)}},
+  author={梁灿彬},
+  year={2009},
+  publisher={科学出版社},
+  pages={196--221},
+  chapter={附录B}
+}
